--- a/arch/arm64/configs/tiare_defconfig
+++ b/arch/arm64/configs/tiare_defconfig
@@ -726,3 +726,6 @@ CONFIG_SQUASHFS_LZ4=y
 # CONFIG_SQUASHFS_4K_DEVBLK_SIZE is not set
 # CONFIG_SQUASHFS_EMBEDDED is not set
 CONFIG_SQUASHFS_FRAGMENT_CACHE_SIZE=3
+
+# exFAT
+CONFIG_EXFAT_FS=y
